--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NTH</title>
+    <title>My Profile</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./icon/themify-icons/themify-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main">
@@ -24,15 +27,9 @@
                     <h2 class="section-heading">GIỚI THIỆU</h2>
                     <div class="about">
                         <img src="./img/anh_profile.JPG" class="about-img">
-                        <ul class="about-text">
-                            <li>Họ Và Tên: Nguyễn Thế Hùng</li>
-                            <li>Ngày Sinh: 22/12/2002</li>
-                            <li>Trường: Học Viện Công Nghệ Bưu Chính Viễn Thông</li>
-                            <li>Ngành: Kỹ Thuật Điện Tử Viễn Thông</li>
-                            <li>Khóa: D20</li>
-                            <li>Lớp: D20CQVT08-b</li>
-                            <li>Mã sinh viên: B20DCVT176</li>
-                        </ul>
+                        <p class="about-text">Xin chào, tôi tên là Nguyễn Thế Hùng, sinh ngày 22/12/2002. Hiện tại tôi đang học tại Học Viện Công Nghệ Bưu Chính Viễn Thông, ngành Kỹ Thuật Điện Tử Viễn Thông, khóa D20, lớp D20CQVT08-b và mã sinh viên của tôi là B20DCVT176.
+                        <br> <br>
+                        Chào mừng bạn đã đến với trang cá nhân của tôi!</P>
                     </div>
                 </div>
             </div>
@@ -41,8 +38,8 @@
                 <div class="content-section" >
                     <h2 class="section-heading">LIÊN HỆ</h2>
                     <div class="contact">
-                        <p><i class="ti-location-pin"></i>Hà Nội,VN</p>
-                        <p><i class="ti-facebook"></i><a href="https://www.facebook.com/Hung221202">Facebook</a></p>
+                        <p><i class="ti-location-pin"></i>Hà Nội, Việt Nam</p>
+                        <p><i class="ti-facebook"></i>Link: <a href="https://www.facebook.com/Hung221202">Facebook</a></p>
                         <p><i class="ti-email"></i>Email: nguyenthehung22122002@gmail.com</p>
                         <p><i class="ti-mobile"></i>Phone: 0365577682</p>
                     </div>
