--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./icon/themify-icons/themify-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,7 @@
     <div id="main">
         <div id="header">
             <ul id="nav">
+                <!-- Header -->
                 <li><a href="#">TRANG CHỦ</a></li>
                 <li><a href="#about-id">GIỚI THIỆU</a></li>
                 <li><a href="#contact-id">LIÊN HỆ</a></li>
@@ -24,6 +26,7 @@
         <div id="content">
             <div id="about-id" class="about-section">
                 <div class="content-section">
+                    <!-- Giới thiệu -->
                     <h2 class="section-heading">GIỚI THIỆU</h2>
                     <div class="about">
                         <img src="./img/anh_profile.JPG" class="about-img">
@@ -36,6 +39,7 @@
             
             <div id="contact-id" class="contact-section">
                 <div class="content-section" >
+                    <!-- Liên Hệ -->
                     <h2 class="section-heading">LIÊN HỆ</h2>
                     <div class="contact">
                         <p><i class="ti-location-pin"></i>Hà Nội, Việt Nam</p>
@@ -46,7 +50,7 @@
                 </div>
             </div>
         </div>
-        
+        <!-- Footer -->
         <div id="footer">     
             <p>Made by NGUYENTHEHUNG</p>
         </div>
