--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2 class="section-heading">GIỚI THIỆU</h2>
                     <div class="about">
                         <img src="./img/anh_profile.JPG" class="about-img">
-                        <p class="about-text">Xin chào, tôi tên là Nguyễn Thế Hùng, sinh ngày 22/12/2002. Hiện tại tôi đang học tại Học Viện Công Nghệ Bưu Chính Viễn Thông, ngành Kỹ Thuật Điện Tử Viễn Thông, khóa D20, lớp D20CQVT08-b và mã sinh viên của tôi là B20DCVT176.
+                        <p class="about-text">Xin chào, tôi tên là Nguyễn Thế Hùng, sinh ngày 22/12/2002. Hiện tại tôi đang học tại Học Viện Công Nghệ Bưu Chính Viễn Thông, ngành Kỹ Thuật Điện Tử Viễn Thông, khóa D20, lớp D20CQVT08-b, mã sinh viên của tôi là B20DCVT176.
                         <br> <br>
                         Chào mừng bạn đã đến với trang cá nhân của tôi!</P>
                     </div>
